# Eregion

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE-APACHE.txt  README.md
.github/workflows/: ci.yml  example-linux-ci.yml
assets/shaders/: example.frag  example.vert  text.frag  text.vert  texture.frag  texture.vert  triangle.vert
cmake/: EregionVersion.cmake  FindGLFW3.cmake  FindGLM.cmake
example/: CMakeLists.txt  main.cpp
example/src/: main.cpp
include/eregion/Asset/: AssetPool.h  AssetPool.hpp  Font.hpp  Loader.h  Loader.hpp  Shader.h  Shader.hpp  Sprite.hpp  SpriteSheet.hpp  Texture.h  Texture.hpp  UniformSpriteSheet.hpp
include/eregion/Core/: Camera.h  Camera.hpp  Game.h  Game.hpp  KeyListener.h  KeyListener.hpp  MouseListener.h  MouseListener.hpp  Result.h  Result.hpp  Scene.h  Scene.hpp
include/eregion/Entity/: Component.h  Component.hpp  Entity.h  Entity.hpp  Sprite.h  Sprite.hpp  SpriteRenderer.h  SpriteRenderer.hpp  TextRenderer.hpp  Transform.h  Transform.hpp
include/eregion/Logger/: Logger.h  Logger.hpp
include/eregion/Render/: BatchRenderer.h  BatchRenderer.hpp  Renderable.hpp  Renderer.h  Renderer.hpp  ShaderProgram.h  ShaderProgram.hpp  SpriteBatchRenderer.hpp  TextBatchRenderer.hpp  TextureProgram.h  TextureProgram.hpp
include/eregion/Util/: OpenGLUtils.h  OpenGLUtils.hpp
include/eregion/Window/: Window.h  Window.hpp
lib/Asset/: AssetPool.cpp  Font.cpp  Loader.cpp  Shader.cpp  Sprite.cpp  SpriteSheet.cpp  Texture.cpp  UniformSpriteSheet.cpp
lib/Core/: Camera.cpp  Game.cpp  KeyListener.cpp  MouseListener.cpp  Result.cpp  Scene.cpp
lib/Entity/: Component.cpp  Entity.cpp  Sprite.cpp  SpriteRenderer.cpp  TextRenderer.cpp  Transform.cpp
lib/Logger/: Logger.cpp
lib/Render/: BatchRenderer.cpp  Renderer.cpp  ShaderProgram.cpp  SpriteBatchRenderer.cpp  TextBatchRenderer.cpp  TextureProgram.cpp
lib/Util/: OpenGLUtils.cpp  OpenGlUtils.cpp
lib/Window/: Window.cpp
